# slm-lab-core

./: .env.example  .gitignore  Makefile  README.md  app.py  pyproject.toml
cli/: evaluate.py  finetune.py  io.py
scripts/: hf_sft_job.py  run_hf_job.py
slmlab/eval/: xml_eval.py
slmlab/prep/: templating.py
slmlab/quant/: to_gguf.py
slmlab/serve/: fastapi_app.py
slmlab/train/: sft_lora.py  sft_unsloth.py
slmlab/utils/: config.py
src/cli/: demo.py  evaluate.py  finetune.py  prep.py  prep_hf.py
src/slmlab/eval/: runner.py
src/slmlab/train/: sft_lora.py
src/slmlab/utils/: config.py
use_cases/unimarc/configs/: default.yaml
use_cases/unimarc/configs/methods/: sft_lora.yaml  sft_unsloth.yaml
use_cases/unimarc/configs/models/: model.yaml
use_cases/unimarc/data/eval/: golden_tests.yaml  unimarc_golden_tests.yaml
use_cases/unimarc/scripts/: smoke_eval.sh
use_cases/unimarc/slm_lab_unimarc/io/: loader_hf.py
use_cases/unimarc/slm_lab_unimarc/prep/: templating.py
