[project]
name = "slm-lab-core"
version = "0.3.0"
description = "Core toolbox for fine-tuning small language models"
requires-python = ">=3.10"
dependencies = [
  "transformers>=4.44",
  "datasets>=2.21",
  "peft>=0.11",
  "evaluate>=0.4",
  "lxml",
  "typer",
  "pyyaml",
  "gradio",
  "ipykernel",
  "unsloth",
  "trl",
  "bitsandbytes",
]

[tool.setuptools.packages.find]
include = ["slmlab*", "cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]